tests/ui/suggestions/suggest-swap.stderr
error[E0499]: cannot borrow `arr[_]` as mutable more than once at a time
  --> $DIR/suggest-swap.rs:12:9
   |
LL |     mem::swap(
   |     --------- first borrow later used by call
LL |         &mut arr[i],
   |         ----------- first mutable borrow occurs here
LL |         &mut arr[j],
   |         ^^^^^^^^^^^ second mutable borrow occurs here
   |
help: use `.swap()` to swap elements at the specified indices instead
   |
LL -     mem::swap(
LL -         &mut arr[i],
LL -         &mut arr[j],
LL -     );
LL +     arr.swap(j, i);
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0499`.
